Fix sub text in About Section mobile dark mode

--- a/styles-dark.css
+++ b/styles-dark.css
@@ -556,6 +556,9 @@ a:hover{
 
     #sub1, #sub2{
         width: 80%;
+        padding-left: 10%;
+        padding-right: 10%;
+        box-sizing: border-box;
     }
 
     .about-para{
